2001-04-24  Andreas Jaeger  <aj@suse.de>

	* wrapsyscall.c: send* and recv* return ssize_t.

	* sysdeps/pthread/timer_getoverr.c (timer_getoverrun): Unlock the
	mutex instead of double locking it.
	Reported by Pierre Artaud <partaud@sodatec.com>.

2001-04-23  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/getcpuclockid.c: Make function generic, test
	using #ifdef whether the clock is available.
	* sysdeps/unix/sysv/linux/i386/getcpuclockid.c: Removed.

	* sysdeps/ia64/Versions: New file.

	* sysdeps/unix/sysv/linux/ia64/pt-initfini.c (_init): We don't
	have to call __gmon_start__ in the libpthread DSO.
	* sysdeps/pthread/pt-initfini.c (_init): Likewise.

	* Makefile (libpthread-routines): Add ptclock_gettime and
	ptclock_settime.
	* internals.h: Don't use cpuclock-init.h definitions, use
	hp-timing.h definitions.
	* pthread.c: Likewise.
	* manager.c: Likewise.
	* ptclock_gettime.c: New file.
	* ptclock_settime.c: New file.
	* internals.h: Fix parameter type for __pthread_clock_gettime and
	__pthread_clock_settime.

	* sysdeps/i386/i586/ptclock_gettime.c: Removed.
	* sysdeps/i386/i586/ptclock_settime.c: Removed.
	* sysdeps/i386/i586/Makefile: Removed.

2001-04-22  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/posix_opt.h: Define _POSIX_ASYNCH_IO.
	* sysdeps/unix/sysv/linux/i386/bits/posix_opt.h: Likewise.

2001-04-21  Andreas Jaeger  <aj@suse.de>

	* sysdeps/pthread/timer_routines.c (thread_func): Add noreturn
	attribute, remove statements that will never be executed.
	(thread_func): Remove mutex_unlock call since it's never executed.
	(thread_func): Fix comment as suggested by Jakub Jelinek.

	* manager.c (__pthread_manager): Add noreturn
	attribute.
	(pthread_start_thread): Likewise, remove return statement.
	(pthread_start_thread_event): Likewise.
	Add noreturn attribute for pthread_handle_exit.
	* weaks.c: Add noreturn attribute for pthread_exit.

	* internals.h: Add __pthread_clock_gettime and