@@ -1,3 +1,10 @@
+2001-05-09  Geoff Keating  <geoffk@redhat.com>
+
+	* sysdeps/powerpc/pt-machine.h 
+	(HAS_COMPARE_AND_SWAP_WITH_RELEASE_SEMANTICS): Define.
+	(__compare_and_swap): Remove memory barriers.
+	(__compare_and_swap_with_release_semantics): New function.
+
 2001-04-24  Andreas Jaeger  <aj@suse.de>
 
 	* wrapsyscall.c: send* and recv* return ssize_t.
